# rs-git-lib

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
src/delta/: mod.rs
src/packfile/: index.rs  mod.rs  packfile_parser.rs  refs.rs
src/store/: commit.rs  mod.rs  object.rs  tree.rs
src/transport/: mod.rs  url_parser.rs
src/transport/client/: file_client.rs  git_client.rs  http_client.rs  local_client.rs  mod.rs  packet.rs  ssh_client.rs
src/utils/: mod.rs
